conservator/tests/fail/createable-for-enum.stderr
error: Creatable can only be derived for structs, not enums
 --> tests/fail/createable-for-enum.rs:4:1
  |
4 | pub enum NotSupport {
  | ^^^
